# equip-loadout

./: README.md
.ops/: 20260319T121033Z-058-add-available.json  20260319T121037Z-625-add-caucus.json  20260319T121040Z-658-add-skill.json  20260319T121042Z-875-add-nanaban.json  20260319T121045Z-286-add-parked.json  20260319T121047Z-793-add-published.json  20260319T121050Z-187-add-sloppy.json  20260319T121052Z-586-add-staked.json  20260319T121053Z-926-add-agg.json  20260319T121054Z-933-add-gemini.json  20260319T121055Z-915-add-home-assistant.json  20260319T121056Z-952-add-namecraft.json  20260319T121057Z-944-add-solcast-proxy.json  20260319T121058Z-944-add-tart.json  20260319T121059Z-940-add-termsvg.json  20260319T121100Z-983-add-xcode.json  20260319T121102Z-119-add-youtube.json  20260319T121127Z-727-add-frontend-design.json  20260319T121130Z-375-add-skill-creator.json  20260325T012741Z-114-add-agg.json  20260325T012741Z-114-add-api-design.json  20260325T012741Z-114-add-available.json  20260325T012741Z-114-add-caucus.json  20260325T012741Z-114-add-content-design.json  20260325T012741Z-114-add-frontend-design.json  20260325T012741Z-115-add-frontend-ui-ux.json  20260325T012741Z-115-add-gemini.json  20260325T012741Z-115-add-home-assistant.json  20260325T012741Z-115-add-namecraft.json  20260325T012741Z-115-add-nanaban.json  20260325T012741Z-115-add-parked.json  20260325T012741Z-115-add-published.json  20260325T012741Z-115-add-rust-pro.json  20260325T012741Z-115-add-skill-creator.json  20260325T012741Z-115-add-skill.json  20260325T012741Z-115-add-sloppy.json  20260325T012741Z-116-add-solcast-proxy.json  20260325T012741Z-116-add-staked.json  20260325T012741Z-116-add-tart.json  20260325T012741Z-116-add-termsvg.json  (+342 more)
skills/available/: Cargo.toml  README.md  SKILL.md
skills/available/.chunkhound/: db.wal.corrupt
skills/available/.github/workflows/: release.yml
skills/available/docs/plans/: homebrew-distribution.md
skills/available/src/: check.rs  generate.rs  lib.rs  main.rs  provider.rs  score.rs  types.rs
skills/caucus/: .gitignore  Cargo.toml  LICENSE  README.md  SKILL.md  pyproject.toml
skills/caucus/.github/workflows/: ci.yml  release.yml
skills/caucus/crates/caucus-cli/: Cargo.toml
skills/caucus/crates/caucus-cli/src/: main.rs
skills/caucus/crates/caucus-cli/src/commands/: ask.rs  bench.rs  compare.rs  debate.rs  mod.rs  serve.rs
skills/caucus/crates/caucus-core/: Cargo.toml
skills/caucus/crates/caucus-core/examples/: basic_consensus.rs  pipeline.rs
skills/caucus/crates/caucus-core/src/: lib.rs  pipeline.rs  provider.rs  types.rs
skills/caucus/crates/caucus-core/src/format/: detailed.rs  mod.rs  plain.rs  structured.rs  supreme_court.rs
skills/caucus/crates/caucus-core/src/strategy/: debate.rs  hybrid.rs  judge.rs  mod.rs  semantic.rs  vote.rs
skills/caucus/crates/caucus-core/tests/: integration_test.rs
skills/caucus/crates/caucus-python/: Cargo.toml
skills/caucus/crates/caucus-python/python/caucus/: __init__.py  __init__.pyi
skills/caucus/crates/caucus-python/src/: lib.rs
skills/caucus/examples/: debate-supreme-court.md  detailed.md  json.md  plain.md  supreme-court.md  verbose.md
skills/caucus/scripts/: check-names.sh
skills/caucus/tests/integration/: consensus_test.rs
skills/skill/: SKILL.md
skills/skill/references/: agents.md
