[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "caucus"
version = "0.1.0"
description = "Multi-LLM consensus engine — composable strategies for aggregating LLM outputs"
requires-python = ">=3.9"
license = "MIT"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "crates/caucus-python/Cargo.toml"
python-source = "crates/caucus-python/python"
