[package]
name = "caucus-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for caucus multi-LLM consensus engine"

[[bin]]
name = "caucus"
path = "src/main.rs"

[dependencies]
caucus-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4", features = ["derive"] }
colored = "3"
dotenvy = "0.15"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
