[package]
name = "caucus-python"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Python bindings for caucus multi-LLM consensus engine"

[lib]
name = "caucus"
crate-type = ["cdylib"]

[dependencies]
caucus-core.workspace = true
pyo3 = { version = "0.28", features = ["extension-module"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
